sub,sup,abbr,dfn

--- a/tipografia.html
+++ b/tipografia.html
@@ -43,6 +43,43 @@
                 
                 <p>esse texto está escrito em <b>negrito</b> e é um texto <strong>forte</strong></p>
                 <p>esse texto está em <i>italico</i> e este texto extá <em>com enfase</em></p>
+                <!--tag u indica que possui uma anotacao nao textual(nao use apenas para sublinhar)
+                , como erros ortográficos, nomes próprios estrangeiros, ou termos especiais.-->
+                <p>Isto é um texto escrito de forma <u>errada</u> e isso é um <a href="#">link</a>.</p>
+            </article>
+
+            <article>
+                <h4>Sobreescrito e subscrito</h4>
+                <!-- 
+                    sup -> para exponenciação
+                    sub -> para quantidade de molecula
+                -->
+                <p>3<sup>2</sup> é igual à 9</p>
+                <p>a formula da água é H<sub>2</sub>O</p>
+            </article>
+
+            <!--
+                <abbr> → mostra o significado de uma abreviação (Mostra significado ao passar o mouse).
+                <dfn> → mostra onde um termo é definido pela primeira vez. (Mostra onde o termo é explicado)
+                <dfn> e <abbr> juntos → forma mais completa e correta de definir uma sigla nova no texto.
+            -->
+            <article>
+                <h4>Abreviações</h4>
+                <p>Para criar páginas na web precisamos aprender sobre 
+                    <abbr title="HiperText Markup Language">HTML</abbr>  
+                </p>
+
+                <p>
+                    Para criar paginas na web precisamos aprender sober
+                    <a href="#html-dfn"></a>
+                    <abbr title="HiperText Markup Language">HTML</abbr>
+                </p>
+                <p>
+                    O <dfn id="html-dfn"><abbr title="HiperText Markup Language">HTML</abbr></dfn>
+                    é a principal linguagem de web onde podemos incluir nosso conteúdo de forma
+                    semântica
+                </p>
+
             </article>
         </section>
 
