--- a/tipografia.html
+++ b/tipografia.html
@@ -79,8 +79,33 @@
                     é a principal linguagem de web onde podemos incluir nosso conteúdo de forma
                     semântica
                 </p>
-
             </article>
+
+            <article>
+                <h4>Citações</h4>
+
+                <blockquote>
+                    <p>O ruim não é ter trabalho. O ruim é ter de trabalhar</p>
+                    <cite>
+                        Seu Madruga
+                    </cite>
+                </blockquote>
+
+                <blockquote cite="https://developer.mozilla.org/pt-BR/docs/Web/HTML/Reference/Elements/blockquote">
+                    <p>O Elemento HTML &lt;blockquote&gt; (ou Elemento HTML de citação de bloco) indica que o texto incluído é uma longa citação.</p>
+                    <cite>
+                        MDN
+                    </cite>
+                </blockquote>
+            </article>
+
+            <p>Segundo o seu madruga <q>A vingança numca é plena,mata a alma e envenena</q></p>
+
+            <p>De acordo com o site da Mozilla 
+                <q cite="https://www.firefox.com/pt-BR/?utm_campaign=SET_DEFAULT_BROWSER">Firefox foi lançado em 2004 e se tornou um grande sucesso</q>
+            </p>
+
+            <p>O filme <cite>Escola do Rock</cite> contém várias músicas antigas</p>
         </section>
 
     </main>
