pre,code,samp e kbd no html

--- a/tipografia.html
+++ b/tipografia.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
@@ -97,15 +97,41 @@
                         MDN
                     </cite>
                 </blockquote>
+
+                 <p>Segundo o seu madruga <q>A vingança numca é plena,mata a alma e envenena</q></p>
+
+                <p>De acordo com o site da Mozilla 
+                    <q cite="https://www.firefox.com/pt-BR/?utm_campaign=SET_DEFAULT_BROWSER">Firefox foi lançado em 2004 e se tornou um grande sucesso</q>
+                </p>
+
+                <p>O filme <cite>Escola do Rock</cite> contém várias músicas antigas</p>
             </article>
 
-            <p>Segundo o seu madruga <q>A vingança numca é plena,mata a alma e envenena</q></p>
 
-            <p>De acordo com o site da Mozilla 
-                <q cite="https://www.firefox.com/pt-BR/?utm_campaign=SET_DEFAULT_BROWSER">Firefox foi lançado em 2004 e se tornou um grande sucesso</q>
-            </p>
+           <article>
+                <h4>Coisas de computador</h4>
 
-            <p>O filme <cite>Escola do Rock</cite> contém várias músicas antigas</p>
+                <p>A propriedade <code>background</code> do CSS serve para colocar uma imagem de fundo</p>
+
+                <pre>
+                    Este texto é um texto pré-formatado
+                </pre>
+
+                <pre>
+                    <code>
+                        article {
+                            padding-top: 1px;
+                            padding-bottom: 1px;
+                        }
+                    </code>
+                </pre>
+
+                <p>
+                    Após executar o método <code>push</code> obtive o retorno <samp lang="us">udefined  has not a push() function</samp>
+                </p>
+
+                <p>precione a telca <kbd>CTRL</kbd> + <kbd>C</kbd></p>
+            </article> 
         </section>
 
     </main>
